tests/ui/imports/resolve_self_super_hint.stderr
error[E0432]: unresolved import `alloc`
  --> $DIR/resolve_self_super_hint.rs:4:9
   |
LL |     use alloc::HashMap;
   |         ^^^^^
   |
help: a similar path exists
   |
LL |     use self::alloc::HashMap;
   |         ++++++

error[E0432]: unresolved import `alloc`
  --> $DIR/resolve_self_super_hint.rs:9:13
   |
LL |         use alloc::HashMap;
   |             ^^^^^
   |
help: a similar path exists
   |
LL |         use super::alloc::HashMap;
   |             +++++++

error[E0432]: unresolved import `alloc`
  --> $DIR/resolve_self_super_hint.rs:14:17
   |
LL |             use alloc::HashMap;
   |                 ^^^^^ unresolved import
   |
help: a similar path exists
   |
LL |             use a::alloc::HashMap;
   |                 +++

error[E0432]: unresolved import `alloc`
  --> $DIR/resolve_self_super_hint.rs:19:21
   |
LL |                 use alloc::HashMap;
   |                     ^^^^^ unresolved import
   |
help: a similar path exists
   |
LL |                 use a::alloc::HashMap;
   |                     +++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0432`.
